# la-hacks-2026

./: .env.example  .gitignore  CONTRACT.md  DEMO.md  Makefile  PLAN.md  PROJECT_STORY.md  README.md  backend_contract.md  pyproject.toml  requirements.txt
agents/: field_unit_agent.py  gemma_parser.py
backend/: .env.example  .gitignore  README.md  app.py  config.py  db.py  gemma_parser.py  geocoder.py  graph.py  hazards.py  main.py  models.py  requirements.txt  router.py  routing_engine.py  routing_engine_osm.py
backend/endpoints/: test_routes.py
backend/scripts/: test_routes.py
backend/services/: db_writes.py  route_service.py
frontend/: .env.example  .gitignore  QUEST_SETUP.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/api/: client.js  mockData.js
frontend/src/audio/: VoiceAlerts.js
frontend/src/scene/: CesiumViewer.js  FireOverlay.js  Ground.js  Markers.js  ReplayController.js  RouteManager.js
frontend/src/utils/: coords.js  mercator.js  tween.js
frontend/src/xr/: VRScene.js  XRController.js  XRSession.js
gis/: fire_spread.py  firms_pipeline.py  noaa_wind.py
gis/data/fixtures/: eaton_fire_jan8.geojson  wind_jan8.json
scripts/: backend_smoke.py  run_demo.py
stub/: backend_stub.py
tests/: test_fire_spread.py  test_firms.py  test_gemma.py  test_routing_engine.py  test_wind.py
